// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Block router > 'getAll' > when getting paginated block results > should default to the first page when no page was specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "blobs": [
      "blobHash001",
    ],
    "excessBlobGas": "15000",
    "hash": "blockHash008",
    "number": 1008,
    "slot": 108,
    "timestamp": 1693497600,
    "totalBlobSize": 1000,
    "transactions": [
      "txHash016",
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "blobs": [
      "blobHash004",
      "blobHash004",
      "blobHash004",
    ],
    "excessBlobGas": "15000",
    "hash": "blockHash007",
    "number": 1007,
    "slot": 107,
    "timestamp": 1693490400,
    "totalBlobSize": 3900,
    "transactions": [
      "txHash015",
    ],
  },
]
`;

exports[`Block router > 'getAll' > when getting paginated block results > should return the correct results when a specific page is requested 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "blobs": [
      "blobHash001",
      "blobHash002",
      "blobHash003",
      "blobHash003",
      "blobHash005",
    ],
    "excessBlobGas": "15000",
    "hash": "blockHash004",
    "number": 1004,
    "slot": 104,
    "timestamp": 1692532800,
    "totalBlobSize": 5900,
    "transactions": [
      "txHash007",
      "txHash008",
      "txHash009",
      "txHash010",
      "txHash011",
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "blobs": [
      "blobHash002",
      "blobHash002",
      "blobHash001",
      "blobHash001",
      "blobHash001",
      "blobHash001",
    ],
    "excessBlobGas": "15000",
    "hash": "blockHash003",
    "number": 1003,
    "slot": 103,
    "timestamp": 1691064000,
    "totalBlobSize": 6200,
    "transactions": [
      "txHash005",
      "txHash006",
    ],
  },
]
`;

exports[`Block router > 'getAllFull' > when getting paginated block results > should default to the first page when no page was specified 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash008",
    "number": 1008,
    "slot": 108,
    "timestamp": 1693497600,
    "totalBlobSize": 1000,
    "transactions": [
      {
        "blobs": [
          {
            "blob": {
              "size": 1000,
            },
            "blobHash": "blobHash001",
            "index": 0,
          },
        ],
        "fromId": "address2",
        "hash": "txHash016",
        "rollup": null,
        "toId": "address4",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash007",
    "number": 1007,
    "slot": 107,
    "timestamp": 1693490400,
    "totalBlobSize": 3900,
    "transactions": [
      {
        "blobs": [
          {
            "blob": {
              "size": 1300,
            },
            "blobHash": "blobHash004",
            "index": 0,
          },
          {
            "blob": {
              "size": 1300,
            },
            "blobHash": "blobHash004",
            "index": 1,
          },
          {
            "blob": {
              "size": 1300,
            },
            "blobHash": "blobHash004",
            "index": 2,
          },
        ],
        "fromId": "address5",
        "hash": "txHash015",
        "rollup": "OPTIMISM",
        "toId": "address4",
      },
    ],
  },
]
`;

exports[`Block router > 'getAllFull' > when getting paginated block results > should return the correct results when a specific page is requested 1`] = `
[
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash004",
    "number": 1004,
    "slot": 104,
    "timestamp": 1692532800,
    "totalBlobSize": 5900,
    "transactions": [
      {
        "blobs": [
          {
            "blob": {
              "size": 1000,
            },
            "blobHash": "blobHash001",
            "index": 0,
          },
        ],
        "fromId": "address1",
        "hash": "txHash007",
        "rollup": "OPTIMISM",
        "toId": "address2",
      },
      {
        "blobs": [
          {
            "blob": {
              "size": 1100,
            },
            "blobHash": "blobHash002",
            "index": 0,
          },
        ],
        "fromId": "address5",
        "hash": "txHash008",
        "rollup": "ARBITRUM",
        "toId": "address6",
      },
      {
        "blobs": [
          {
            "blob": {
              "size": 1200,
            },
            "blobHash": "blobHash003",
            "index": 0,
          },
        ],
        "fromId": "address5",
        "hash": "txHash009",
        "rollup": null,
        "toId": "address6",
      },
      {
        "blobs": [
          {
            "blob": {
              "size": 1200,
            },
            "blobHash": "blobHash003",
            "index": 0,
          },
        ],
        "fromId": "address3",
        "hash": "txHash010",
        "rollup": null,
        "toId": "address4",
      },
      {
        "blobs": [
          {
            "blob": {
              "size": 1400,
            },
            "blobHash": "blobHash005",
            "index": 0,
          },
        ],
        "fromId": "address2",
        "hash": "txHash011",
        "rollup": "BASE",
        "toId": "address4",
      },
    ],
  },
  {
    "blobAsCalldataGasUsed": "255000",
    "blobGasPrice": "22",
    "blobGasUsed": "5500000",
    "excessBlobGas": "15000",
    "hash": "blockHash003",
    "number": 1003,
    "slot": 103,
    "timestamp": 1691064000,
    "totalBlobSize": 6200,
    "transactions": [
      {
        "blobs": [
          {
            "blob": {
              "size": 1100,
            },
            "blobHash": "blobHash002",
            "index": 0,
          },
          {
            "blob": {
              "size": 1100,
            },
            "blobHash": "blobHash002",
            "index": 1,
          },
          {
            "blob": {
              "size": 1000,
            },
            "blobHash": "blobHash001",
            "index": 2,
          },
        ],
        "fromId": "address2",
        "hash": "txHash005",
        "rollup": null,
        "toId": "address4",
      },
      {
        "blobs": [
          {
            "blob": {
              "size": 1000,
            },
            "blobHash": "blobHash001",
            "index": 0,
          },
          {
            "blob": {
              "size": 1000,
            },
            "blobHash": "blobHash001",
            "index": 1,
          },
          {
            "blob": {
              "size": 1000,
            },
            "blobHash": "blobHash001",
            "index": 2,
          },
        ],
        "fromId": "address2",
        "hash": "txHash006",
        "rollup": null,
        "toId": "address4",
      },
    ],
  },
]
`;

exports[`Block router > 'getByBlockId' > should get a block by block number 1`] = `
{
  "blobAsCalldataGasUsed": "255000",
  "blobGasPrice": "22",
  "blobGasUsed": "5500000",
  "blobs": [
    "blobHash001",
    "blobHash002",
    "blobHash003",
    "blobHash004",
    "blobHash005",
    "blobHash006",
  ],
  "excessBlobGas": "15000",
  "hash": "blockHash002",
  "number": 1002,
  "slot": 102,
  "timestamp": 1683720000,
  "totalBlobSize": 7500,
  "transactions": [
    "txHash004",
  ],
}
`;

exports[`Block router > 'getByBlockIdFull' > should get a block by block number 1`] = `
{
  "blobAsCalldataGasUsed": "255000",
  "blobGasPrice": "22",
  "blobGasUsed": "5500000",
  "excessBlobGas": "15000",
  "hash": "blockHash002",
  "number": 1002,
  "slot": 102,
  "timestamp": 1683720000,
  "totalBlobSize": 7500,
  "transactions": [
    {
      "blobs": [
        {
          "blob": {
            "size": 1000,
          },
          "blobHash": "blobHash001",
          "index": 0,
        },
        {
          "blob": {
            "size": 1100,
          },
          "blobHash": "blobHash002",
          "index": 1,
        },
        {
          "blob": {
            "size": 1200,
          },
          "blobHash": "blobHash003",
          "index": 2,
        },
        {
          "blob": {
            "size": 1300,
          },
          "blobHash": "blobHash004",
          "index": 3,
        },
        {
          "blob": {
            "size": 1400,
          },
          "blobHash": "blobHash005",
          "index": 4,
        },
        {
          "blob": {
            "size": 1500,
          },
          "blobHash": "blobHash006",
          "index": 5,
        },
      ],
      "fromId": "address1",
      "hash": "txHash004",
      "rollup": "BASE",
      "toId": "address3",
    },
  ],
}
`;
